# nQuat

./: .gitignore  CMakeLists.txt
models/: sphere.tri  sphere.vtx
src/: main.cpp
src/quaternion/: quaternion.cpp  quaternion.h
src/rasterizer/: rasterizer.cpp  rasterizer.h
src/vectors/: vector2.cpp  vector2.h  vector3.cpp  vector3.h
src/window/: window.cpp  window.h
